--- a/Gruppprojekt-Grupp2/strapi/jsconfig.json
+++ b/Gruppprojekt-Grupp2/strapi/jsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodenNext",
+    "moduleResolution": "nodenext",
     "target": "ES2021",
     "checkJs": true,
     "allowJs": true
