--- a/Gruppprojekt-Grupp2/package.json
+++ b/Gruppprojekt-Grupp2/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
+    "typeface-dm-serif-display": "^1.1.13",
+    "typeface-sevillana": "^1.1.13",
     "vite-plugin-require": "^0.0.3"
   },
   "devDependencies": {
